# claw-chain

./: .gitignore  Cargo.toml  README.md  ROADMAP.md
.github/workflows/: cla-check.yml  contributor-tracking.yml  documentation-check.yml
deploy/: Containerfile  README.md  setup-vps.sh
deploy/monitoring/: prometheus.yml
deploy/nginx/: nginx.conf
deploy/quadlet/: clawchain-data.volume  clawchain-node-dev.container  clawchain-node.container  clawchain-proxy.container  prometheus-data.volume  prometheus.container
node/: Cargo.toml  build.rs
node/src/: cli.rs  command.rs  main.rs  rpc.rs  service.rs
pallets/reputation/: Cargo.toml
pallets/reputation/src/: lib.rs  tests.rs
pallets/task-market/: Cargo.toml
pallets/task-market/src/: lib.rs  tests.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: start-dev.sh  test-pallets.py
